added a style to the page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="menu">
       <main>
-        <h1>CAMPER CAFE</h1>
+        <h1>Grunder CAFE</h1>
         <p class="established">Est. 2020</p>
         <hr>
         <section>
@@ -53,7 +53,7 @@
         <p>
           <a href="https://www.freecodecamp.org" target="_blank">Visit our website</a>
         </p>
-        <p class="address">123 Free Code Camp Drive</p>
+        <p class="address">Sonne alle,Berlin</p>
       </footer>
     </div>
   </body>
